# comprehend

./: .gitignore  README.md  pyproject.toml
deploy/: Caddyfile.snippet  comprehend.service  env.example
spikes/: seed_dev.py  smoke_e2e.py  spike_path_token.py
src/comprehend/: __init__.py  admin.py  config.py  identity.py  instructions.py  owner.py  participant.py  results.py  security.py  server.py  store.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  ui.tsx
web/src/pages/: Feedback.tsx  InterviewEdit.tsx  InterviewResults.tsx  Interviews.tsx  Login.tsx  People.tsx  PersonDetail.tsx
