[project]
name = "comprehend"
version = "0.1.0"
description = "Knowledge-internalization interviewer delivered as Claude.ai connectors (participant + owner) plus a private dashboard."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.3.1",
    "starlette>=0.41.0",
    "uvicorn>=0.34.0",
]

[project.scripts]
comprehend = "comprehend:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
